# ocr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: clipboard.rs  main.rs  ocr.rs
