[package]
name = "ocr"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
utf16_lit = "2.0"
once_cell = "1.17"

[dependencies.windows]
version = "0.48"
features = [
    "Graphics_Imaging",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_Ocr",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_DataExchange",
    # "Win32_System_SystemServices",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
]

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
