[package]
name = "ocr"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
utf16_lit = "2.0"

[dependencies.windows]
version = "0.62"
features = [
    "Graphics_Imaging",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_Ocr",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_DataExchange",
    # "Win32_System_SystemServices",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_RichEdit",
]

[profile.dev]
debug = 0

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
